[package]
name = "stu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabled = "0.10.0"
serde_json = "1.0"
serde = {version = "1.0.152", features = ["derive"]}
tempfile = "3.3.0"
colored = "2.0.0"
simple-home-dir = "0.2.0"
edit = "0.1.4"


[[test]]
name = "utils_test"
path = "src/utils_test.rs"
